takamaka_examples/src/io/takamaka/tests/errors/inconsistentpayable2/Super.java
package io.takamaka.tests.errors.inconsistentpayable2;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.Entry;

public class Super extends Contract {
	public @Entry void m() {}
}